--- a/Assignments/jinnee/AssignmentPython5-Loops-jinnee.ipynb
+++ b/Assignments/jinnee/AssignmentPython5-Loops-jinnee.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "383a3508",
    "metadata": {},
    "outputs": [
@@ -53,49 +53,41 @@
     "\n",
     "n = int(input(\"enter a number:\"))\n",
     "\n",
-    "for i in range(1,n+1):\n",
-    "    print(i, end=' ')"
+    "for e in range(1,n+1):\n",
+    "    print(e, end=' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "882caf2b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "9d581827",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter a number:4\n",
-      "1 2 3 4 10.0\n"
+      "enter a number:7\n",
+      "28\n"
      ]
     }
    ],
    "source": [
     "# WAP to find sum of first n natural numbers\n",
     "\n",
+    "\n",
     "n = int(input(\"enter a number:\"))\n",
     "\n",
-    "for i in range (1,n+1):\n",
-    "    print(i, end=' ')\n",
-    "\n",
-    "res = (n*(n+1))/2\n",
-    "print(res)\n"
+    "total = 0\n",
+    "for e in range (1,n+1):\n",
+    "    total = total + e\n",
+    "print(total)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6f0ceaf",
+   "id": "9d581827",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -103,14 +95,15 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4f895453",
+   "id": "a6f0ceaf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter n:5\n",
+      "enter n:6\n",
+      "6\n",
       "5\n",
       "4\n",
       "3\n",
@@ -121,6 +114,7 @@
    ],
    "source": [
     "# WAP to print first n natural numbers in reverse order\n",
+    "# Answer 1\n",
     "\n",
     "n = int(input(\"enter n:\"))\n",
     "\n",
@@ -132,12 +126,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "88af49b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter n:6\n",
+      "6 5 4 3 2 1 "
+     ]
+    }
+   ],
+   "source": [
+    "# WAP to print first n natural numbers in reverse order\n",
+    "# element -> 1,2,3,4,5,6\n",
+    "# index   -> 0 1 2 3 4 5 \n",
+    "# Answer 2\n",
+    "\n",
+    "n = int(input(\"enter n:\"))\n",
+    "a = list(range(1,n+1))              \n",
+    "\n",
+    "i = n-1\n",
+    "while i >= 0:\n",
+    "    print(a[i], end = ' ')\n",
+    "    i -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "850814da",
+   "id": "8c8b0f3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4f895453",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter n:4\n",
+      "factorial is: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WAP to input a number and print its factorial\n",
+    "# 1 x 2 x 3 x 4 x 5 x 6\n",
+    "\n",
+    "n = int(input(\"enter n:\"))\n",
+    "\n",
+    "prod = 1\n",
+    "i = 1\n",
+    "while i<= n:\n",
+    "    prod = prod*i\n",
+    "    i += 1\n",
+    "print(\"factorial is:\", prod)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "424e15ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "          "
+    "#scribble\n",
+    "total = 0\n",
+    "total = total + 1\n",
+    "total = total - 1\n",
+    "\n",
+    "total = 1\n",
+    "total = total*1\n",
+    "total = total*2\n",
+    "total = total*3\n",
+    "total = total*4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "548db31e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "850814da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter n:60\n",
+      "0 1 1 2 3 5 8 13 21 34 55 "
+     ]
+    }
+   ],
+   "source": [
+    "# WAP to print Fibonacci sequence till n.\n",
+    "# 0, 1, 1, 2, 3, 5, 8, 13, 21\n",
+    "# a  b  f\n",
+    "#    a  b   \n",
+    "    \n",
+    "n = int(input(\"enter n:\"))\n",
+    "\n",
+    "a = 0\n",
+    "b = 1\n",
+    "while a <= n:\n",
+    "    print(a, end=' ')\n",
+    "    f = a + b\n",
+    "    a = b\n",
+    "    b = f"
    ]
   },
   {
@@ -146,11 +256,7 @@
    "id": "ad711296",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# WAP to print Fibonacci sequence till n.\n",
-    "# 0, 1, 1, 2, 3, 5, 8, 13, 21\n",
-    "# will update answer "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -169,11 +275,7 @@
    "source": [
     "# WAP to print all digits of a number input from user\n",
     "# 126 -> 1 2 6\n",
-    "# will update answer\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# will update answer \n",
     "\n"
    ]
   },
